[package]
edition = "2021"
name = "torrent-rs"
version = "0.1.0"
[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
sha-1 = "0.9.6"
tokio-test = "*"
num_cpus = "1.13.0"
async-channel = "1.6.1"
bincode = "1.3.3"
rand="0.8.3"

[dependencies.tokio]
features = ["rt", "rt-multi-thread", "net", "fs", "io-util", "sync", "time", "macros"]
version = "1.6.1"
